--- a/TEMA-1/Clase4_OptmizacionProgramacion.ipynb
+++ b/TEMA-1/Clase4_OptmizacionProgramacion.ipynb
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
        "[12, 0, 16, 0, 20, 0, 24, 0, 28]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,20 +571,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[12, 0, 16, 0, 20, 0, 24, 0, 28]"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l = []\n",
     "for i in range(len(lista1)):\n",
@@ -593,6 +582,69 @@
     "    else:\n",
     "        l.append(0)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 7, 9]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Compresion de listas\n",
+    "sum2=[suma(l1[i],l2[i])for i in range (len(l1))]\n",
+    "sum2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 7])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum3=np.array(1)+np.array(l2)\n",
+    "sum3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=print(3)\n",
+    "b=lambda x:print(x)\n",
+    "b(4)"
    ]
   },
   {
@@ -606,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -687,18 +739,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "300"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[100, 200, 200]\n"
+     ]
     }
    ],
    "source": [
@@ -710,9 +759,19 @@
     "\n",
     "l1 = [100,25,200,5]\n",
     "\n",
-    "# c1 = [f2(j) for j in l1]\n",
+    "#c1 = [f2(j) for j in l1]\n",
     "# print(c1)\n",
-    "f1(30, 300)"
+    "r_f2=[]\n",
+    "for num in l1:\n",
+    "    r_f2.append(f2(num))\n",
+    "#r_f2\n",
+    "r_f1=[]\n",
+    "for i in range(len(l1)-1):\n",
+    "    r_f1.append(f1(l1[i],l1[i+1]))\n",
+    "r_f1\n",
+    "compresion=[f2(num)for num in l1]\n",
+    "compresion1=[f1(l1[i],l1[i+1])for i in range (len(l1)-1)]\n",
+    "print (compresion1)"
    ]
   },
   {
@@ -771,18 +830,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([102.56,  97.7 ,  99.14, 100.04])"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[102.56  97.7   99.14 100.04]\n"
+     ]
     }
    ],
    "source": [
@@ -817,7 +873,9 @@
     "f5 = (float(9)/5)*Celsius + 32\n",
     "\n",
     "f5 \n",
-    "# Comparar\n"
+    "# Comparar\n",
+    "f6=conver_c_to_fa(np.array(Celsius))\n",
+    "print (f6)\n"
    ]
   },
   {
@@ -938,6 +996,7 @@
    ],
    "source": [
     "# Escribir el programa acá \n",
+    "\n",
     "N = 3\n",
     "fns = [np.arctan,np.cos,np.sin]\n",
     "xs = np.arange(N)\n",
@@ -955,6 +1014,9 @@
     "\n",
     "sol2 = [fi(xs) for fi in fns]\n",
     "sol2\n",
+    "\n",
+    "l3=[[fi(num)for num in xs]for fi in fns_math]\n",
+    "print(l3)\n",
     "\n",
     "# 3. Funciones map\n",
     "sol3 = list(map(lambda pedro: pedro(xs), fns))\n",
@@ -1940,23 +2002,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['34587', 163.8],\n",
-       " ['98762', 284.0],\n",
-       " ['77226', 108.85000000000001],\n",
-       " ['88112', 84.97]]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "########### Solución 1\n",
     "orders = [ [\"34587\", \"Learning Python, Mark Lutz\", 4, 40.95], \n",
