--- a/TEMA-1/Clase4_OptmizacionProgramacion.ipynb
+++ b/TEMA-1/Clase4_OptmizacionProgramacion.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,6 +1057,7 @@
     "\n",
     "# Combinar map y compresión de listas para evaluar números 0-5 de cada función en cada iteración \n",
     "N = 6\n",
+    "#For clásico(metodo a olvidar)\n",
     "\n",
     "# Map\n",
     "value = list(map(lambda numero: list(map(lambda fi: fi(numero), funcs)), range(N)))\n",
